--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "lerna": "^3.13.1"
+    "lerna": "^3.22.1"
+  },
+  "dependencies": {
+    "gatsby-theme-elements": "^1.0.7",
+    "graphql": "^15.3.0"
   }
 }
