--- a/studio/package.json
+++ b/studio/package.json
@@ -26,6 +26,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "sanity-graphql-schema": "^0.0.7",
     "sanity-plugin-dashboard-widget-document-list": "^0.0.8",
     "sanity-plugin-dashboard-widget-netlify": "^1.0.1"
   },
