--- a/web/package.json
+++ b/web/package.json
@@ -16,14 +16,21 @@
     "@sanity/image-url": "^0.140.18",
     "date-fns": "^1.30.1",
     "gatsby": "^2.24.52",
-    "gatsby-image": "^2.0.41",
+    "gatsby-image": "^2.4.16",
+    "gatsby-plugin-manifest": "^2.4.26",
+    "gatsby-plugin-offline": "^3.2.26",
     "gatsby-plugin-postcss": "^2.0.7",
-    "gatsby-plugin-react-helmet": "^3.0.12",
+    "gatsby-plugin-react-helmet": "^3.3.10",
+    "gatsby-plugin-sharp": "^2.6.30",
+    "gatsby-plugin-sitemap": "^2.4.12",
+    "gatsby-source-filesystem": "^2.3.27",
     "gatsby-source-sanity": "^4.0.1",
     "gatsby-theme-elements": "^1.0.7",
+    "gatsby-transformer-remark": "^2.8.32",
+    "gatsby-transformer-sharp": "^2.5.13",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.1"
   },
   "devDependencies": {
     "dotenv": "^8.0.0",
@@ -38,6 +45,7 @@
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.6.0",
     "prettier-eslint-cli": "^4.7.1",
-    "rimraf": "^2.6.3"
+    "rimraf": "^2.6.3",
+    "webpack": "^4.44.1"
   }
 }
